Fixed a bug with full width route name on mobile

--- a/src/components/shared/RemoveService/RemoveService.module.scss
+++ b/src/components/shared/RemoveService/RemoveService.module.scss
@@ -1,8 +1,11 @@
 @import '~assets/styles/vars';
 
 .leftWrap {
-  width: calc(100% - 180px);
   flex-wrap: nowrap;
+
+  @media all and(min-width: $breakpoint-sm) {
+    width: calc(100% - 180px);
+  }
 }
 
 .train {
